--- a/templates/app/views/layout.haml
+++ b/templates/app/views/layout.haml
@@ -1,6 +1,6 @@
 %html
   %head
     %link{:href => "/stylesheets/application.css", :rel=>"stylesheet"}
-  %body{:class => {"w-[50rem] mx-auto"}}
+  %body{:class => "w-[50rem] mx-auto"}
     %h1.text-center= "Welcome"
     != yield
