--- a/templates/app/styles/application.tailwind.css
+++ b/templates/app/styles/application.tailwind.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.responsive-container {
+    @apply mx-auto px-4;
+    /* Center and padding for small devices */
+    @apply max-w-screen-sm;
+    /* Max width for small devices */
+
+    /* Medium devices (tablets, less than 768px) */
+    @apply md:max-w-screen-md;
+
+    /* Large devices (desktops, 1024px and up) */
+    @apply lg:max-w-screen-lg;
+
+    /* Extra large devices (large desktops, 1280px and up) */
+    @apply xl:max-w-screen-xl;
+
+    /* 2XL devices (4k and large screens, 1536px and up) */
+    @apply 2xl:max-w-screen-2xl;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea,
+.btn,
+.button {
+    border-radius: .5rem !important;
+}
