--- a/templates/app/views/layout.haml
+++ b/templates/app/views/layout.haml
@@ -1,6 +1,18 @@
-%html
+%html{:data => {:theme => 'business'}}
   %head
     %link{:href => "/stylesheets/application.css", :rel=>"stylesheet"}
-  %body{:class => "w-[50rem] mx-auto"}
-    %h1.text-center= "Welcome"
-    != yield
+    %link{href:"https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css", rel:"stylesheet", type:"text/css"}
+    -# %link{:href => "/stylesheets/milligram.css", :rel=>"stylesheet"}
+    %link{:href => "/stylesheets/custom.css", :rel=>"stylesheet"}
+
+
+  %body
+    %div.navbar.bg-base-100.shadow-md.mb-8
+      %div.flex-1
+        %a.button.btn.btn-ghost.text-xl{:href => "/"}= "home"
+      %div.flex-none
+        %button.btn.btn-square.btn-ghost
+          %svg{xmlns:"http://www.w3.org/2000/svg", fill:"none",viewBox:"0 0 24 24",class:"inline-block w-5 h-5 stroke-current"}
+            %path{:"stroke-linecap" => "round", :"stroke-linejoin" => "round", :"stroke-width" => "2", :d => "M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"}
+    %div.responsive-container
+      != yield
