--- a/templates/app/views/layout.haml
+++ b/templates/app/views/layout.haml
@@ -1,4 +1,4 @@
-%html{:data => {:theme => 'business'}}
+%html{:data => {:theme => 'garden'}}
   %head
     %link{:href => "/stylesheets/application.css", :rel=>"stylesheet"}
     %link{href:"https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css", rel:"stylesheet", type:"text/css"}
@@ -9,10 +9,14 @@
   %body
     %div.navbar.bg-base-100.shadow-md.mb-8
       %div.flex-1
-        %a.button.btn.btn-ghost.text-xl{:href => "/"}= "home"
+        %a.button.btn.btn-ghost.text-xl{:href => "/"}= "Blog"
       %div.flex-none
-        %button.btn.btn-square.btn-ghost
-          %svg{xmlns:"http://www.w3.org/2000/svg", fill:"none",viewBox:"0 0 24 24",class:"inline-block w-5 h-5 stroke-current"}
-            %path{:"stroke-linecap" => "round", :"stroke-linejoin" => "round", :"stroke-width" => "2", :d => "M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"}
+        %div.flex.flex-row
+          - if session[:current_user]
+            %a.link{:href => "/user/profile/#{session[:current_user][:id]}"}= session[:current_user][:email]
+          %a.link{href: "/login"}= "Login" if session[:current_user].nil?
+          %button.btn.btn-square.btn-ghost
+            %svg{xmlns:"http://www.w3.org/2000/svg", fill:"none",viewBox:"0 0 24 24",class:"inline-block w-5 h-5 stroke-current"}
+              %path{:"stroke-linecap" => "round", :"stroke-linejoin" => "round", :"stroke-width" => "2", :d => "M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"}
     %div.responsive-container
       != yield
