--- a/templates/app/views/login.haml
+++ b/templates/app/views/login.haml
@@ -4,11 +4,11 @@
     %label.form-control
       %div.label
         %span.label-text.text-neutral-content= "Email"
-      %input.input.input-bordered{:name => :email, :placeholder => :email}
+      %input.input.input-bordered{:style => "color: hsl(var(--n)); background-color: hsl(var(--nc))", :name => :username}
     %label.form-control
       %div.label
         %span.label-text.text-neutral-content= "Password"
-      %input.input.input-bordered{type: :password, :name => :password, :placeholder => :email}
+      %input.input.input-bordered{:style => "color: hsl(var(--n)); background-color: hsl(var(--nc))", type: :password, :name => :password}
     %div.stack-lg.mt-12
       %div.flex.flex-row.justify-center
         %button.btn.btn-accent.w-56= "Login"
