finish refactor and other random stuff

--- a/templates/app/views/layout.haml
+++ b/templates/app/views/layout.haml
@@ -9,7 +9,7 @@
   %body
     %div.navbar.bg-base-100.shadow-md.mb-8
       %div.flex-1
-        %a.button.btn.btn-ghost.text-xl{:href => "/"}= "Blog"
+        %a.button.btn.btn-ghost.text-xl{:href => "/"}= "Site"
       %div.flex-none
         %div.flex.flex-row
           - if current_user
