add error messages when using users/sessions

--- a/templates/app/views/users_new.haml
+++ b/templates/app/views/users_new.haml
@@ -4,11 +4,14 @@
     %label.form-control
       %div.label
         %span.label-text.text-neutral-content= "Email"
-      %input.input.input-bordered{:style => "color: hsl(var(--n)); background-color: hsl(var(--nc))", :name => :username}
+      %input.input.input-bordered{value: @user.username, :name => :username}
     %label.form-control
       %div.label
         %span.label-text.text-neutral-content= "Password"
-      %input.input.input-bordered{:style => "color: hsl(var(--n)); background-color: hsl(var(--nc))", type: :password, :name => :password}
+      %input.input.input-bordered{value: @user.password_hash, type: :password, :name => :password}
+    - if @errors.size > 0
+      %div.bg-red-100.border.border-red-400.text-red-700.px-4.py-3.rounded.relative.text-sm
+        %span.block.sm:inline= @errors.join(", ")
     %div.stack-lg.mt-12
       %div.flex.flex-row.justify-center
         %button.btn.btn-accent.w-56 Submit
