--- a/templates/app/views/users_edit.haml
+++ b/templates/app/views/users_edit.haml
@@ -3,6 +3,12 @@
   %div{style: "width: 20rem"}
     %div.stack-md
       %a.link{style: "font-size: 1rem;", href: "/logout"}= "Logout"
+      - if flash[:error]
+        %div.bg-red-100.border.border-red-400.text-red-700.px-4.py-3.rounded.relative.text-sm
+          = flash[:error]
+      - if flash[:notice]
+        %div.bg-green-100.border.border-green-400.text-green-700.px-4.py-3.rounded.relative.text-sm
+          = flash[:notice]
       %label.form-control
         %div.label
           %span.label-text= "Full Name"
