--- a/templates/app/views/users_new.haml
+++ b/templates/app/views/users_new.haml
@@ -9,9 +9,9 @@
       %div.label
         %span.label-text.text-neutral-content= "Password"
       %input.input.input-bordered{value: @user.password_hash, type: :password, :name => :password}
-    - if @errors.size > 0
+    - if flash[:error]
       %div.bg-red-100.border.border-red-400.text-red-700.px-4.py-3.rounded.relative.text-sm
-        %span.block.sm:inline= @errors.join(", ")
+        %span.block.sm:inline= flash[:error]
     %div.stack-lg.mt-12
       %div.flex.flex-row.justify-center
         %button.btn.btn-accent.w-56 Submit
