--- a/templates/app/views/users_new.haml
+++ b/templates/app/views/users_new.haml
@@ -1,17 +1,19 @@
-%form{:action => "/user", :method => "post"}
-  %div.shadow-lg.stack-md.rounded-md.bg-neutral.text-neutral-content{style: "padding: 4rem; border-radius: .5rem; max-width: 30rem; margin:auto"}
-    %span= "Sign Up"
-    %label.form-control
-      %div.label
-        %span.label-text.text-neutral-content= "Email"
-      %input.input.input-bordered{value: @user.username, :name => :username}
-    %label.form-control
-      %div.label
-        %span.label-text.text-neutral-content= "Password"
-      %input.input.input-bordered{value: @user.password_hash, type: :password, :name => :password}
+%form{action: "/user", method: :post}
+  %div.bg-white.shadow-lg.stack-md.rounded-md.p-16.rounded-md.m-auto.max-w-96
+    %span.font-semibold.text-gray-600= "Sign Up"
+    %div.stack-xs
+      %label
+        %div
+          %span= "Username"
+      %input.bottom-border{autofocus: true, value: @user.username, name: :username}
+    %div.stack-xs
+      %label
+        %div
+          %span= "Password"
+      %input.bottom-border{value: @user.password_hash, type: :password, name: :password}
     - if flash[:error]
       %div.bg-red-100.border.border-red-400.text-red-700.px-4.py-3.rounded.relative.text-sm
         %span.block.sm:inline= flash[:error]
     %div.stack-lg.mt-12
       %div.flex.flex-row.justify-center
-        %button.btn.btn-accent.w-56 Submit
+        %button.primary Submit
